@@ -6,7 +6,7 @@ use namespace::autoclean;
 
 our $VERSION = '0.05';
 
-use Params::CheckCompiler qw( compile );
+use Params::ValidationCompiler qw( compile );
 use WebService::PivotalTracker::PropertyAttributes;
 use WebService::PivotalTracker::Types
     qw( ArrayRef Bool DateTimeObject NonEmptyStr PositiveInt );
